fixed height and width of saved favorite caracter on mobile viewport

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -167,6 +167,8 @@ footer {
     #char-name-4 {
         padding-left: 0;
         padding-right: 0;
+        width: 100%;
+        height: 100%;
     }
 
     #favorite-characters {
